--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "keywords": [],
   "devDependencies": {
+    "hammer-touchemulator": "0.0.2",
     "html-webpack-plugin": "^4.5.0",
     "rollup-plugin-terser": "^7.0.2",
     "webpack": "^4.44.2",
