--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "webpack --mode development",
     "rollup": "rollup -c rollup.config.js",
     "buildlib": "webpack -c webpacklib.config.js --mode development",
+    "nodemon": "nodemon --watch ./src --exec npm run rollup",
     "documentation": "documentation build src/** -f html -o docs"
   },
   "repository": {
@@ -24,7 +25,10 @@
     "rollup-plugin-terser": "^7.0.2",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "nodemon": "^2.0.7",
+    "documentation": "^13.2.3",
+    "rollup": "^2.45.2"
   },
   "dependencies": {},
   "files": [
