--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@tensorflow/tfjs": "^3.7.0"
+  },
   "files": [
     "build/openlime.js",
     "LICENSE",
