--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "rollup": "rollup -c rollup.config.js",
     "buildlib": "webpack -c webpacklib.config.js --mode development",
     "nodemon": "nodemon --watch ./src --exec npm run rollup",
-    "documentation": "documentation build src/** -f html -o docs"
+    "doc": "jsdoc -c jsdoc/jsdoc.json -R README.md"
   },
   "repository": {
     "type": "git",
@@ -21,8 +21,9 @@
   },
   "keywords": [],
   "devDependencies": {
-    "documentation": "^13.2.3",
     "html-webpack-plugin": "^4.5.0",
+    "ink-docstrap": "^1.3.2",
+    "jsdoc": "^3.6.10",
     "nodemon": "^2.0.15",
     "rollup": "^2.52.3",
     "rollup-plugin-terser": "^7.0.2",
