Github Actions: Release generator modified

--- a/.github/workflows/01-release.yml
+++ b/.github/workflows/01-release.yml
@@ -24,7 +24,7 @@ jobs:
         cache: 'npm'
 
     - name: Install npm
-      run: npm ci
+      run: npm c
 
     - name: Rollup
       run: npm run rollup
