Added LICENSE and README in .zip file

--- a/.github/workflows/01-release.yml
+++ b/.github/workflows/01-release.yml
@@ -35,6 +35,8 @@ jobs:
       run: |
         cp -r dist/css build
         cp -r dist/skin build
+        cp README.md build
+        cp LICENSE build
 
     - name: Rename build to openlime
       run: mv build openlime
