--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "nodemon": "^2.0.15",
     "rollup": "^2.52.3",
     "rollup-plugin-terser": "^7.0.2",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "sanitize-html": "^2.7.0",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   },
   "files": [
     "build/openlime.js",
