--- a/package.json
+++ b/package.json
@@ -22,12 +22,11 @@
   "keywords": [],
   "devDependencies": {
     "html-webpack-plugin": "^4.5.0",
-    "ink-docstrap": "^1.3.2",
+    "ink-docstrap-template": "^1.3.2",
     "jsdoc": "^3.6.10",
     "nodemon": "^2.0.15",
     "rollup": "^2.52.3",
     "rollup-plugin-terser": "^7.0.2",
-    "sanitize-html": "^2.7.0",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
