--- a/.github/workflows/01-release.yml
+++ b/.github/workflows/01-release.yml
@@ -35,6 +35,8 @@ jobs:
       run: |
         cp -r dist/css build
         cp -r dist/skin build
+        cp -r dist/examples build
+        cp -r dist/assets build
         cp README.md build
         cp LICENSE build
 
