--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --hot",
-    "build": "webpack --mode development",
+    "build": "webpack -c webpack.config.js --mode development",
     "rollup": "rollup -c rollup.config.js",
     "buildlib": "webpack -c webpacklib.config.js --mode development",
     "nodemon": "nodemon --watch ./src --exec npm run rollup",
