--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
   "main": "build/openlime.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --hot",
+    "start": "webpack-dev-server",
     "build": "webpack -c webpack.config.js --mode development",
     "rollup": "rollup -c rollup.config.js",
-    "buildlib": "webpack -c webpacklib.config.js --mode development",
     "nodemon": "nodemon --watch ./src --exec npm run rollup",
     "doc": "jsdoc -c jsdoc/jsdoc.json -R README.md"
   },
@@ -21,7 +20,7 @@
   },
   "keywords": [],
   "devDependencies": {
-    "html-webpack-plugin": "^4.5.0",
+    "html-webpack-plugin": "^5.5.0",
     "ink-docstrap-template": "^1.3.2",
     "jsdoc": "^3.6.10",
     "nodemon": "^2.0.15",
