--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "keywords": [],
   "devDependencies": {
+    "copy-webpack-plugin": "^10.2.4",
     "html-webpack-plugin": "^5.5.0",
     "ink-docstrap-template": "^1.3.2",
     "jsdoc": "^3.6.10",
