--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server",
     "build": "webpack -c webpack.config.js --mode development",
-    "rollup": "rollup -c rollup.config.js",
+    "rollup": "rollup -c rollup.config.js --extend",
     "nodemon": "nodemon --watch ./src --exec npm run rollup",
     "doc": "jsdoc -c jsdoc/jsdoc.json -R README.md"
   },
@@ -20,12 +20,14 @@
   },
   "keywords": [],
   "devDependencies": {
+    "@rollup/plugin-multi-entry": "^4.1.0",
     "copy-webpack-plugin": "^10.2.4",
     "html-webpack-plugin": "^5.5.0",
     "ink-docstrap-template": "^1.3.2",
     "jsdoc": "^3.6.10",
     "nodemon": "^2.0.15",
     "rollup": "^2.52.3",
+    "rollup-plugin-ignore": "^1.0.10",
     "rollup-plugin-terser": "^7.0.2",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
