--- a/.github/workflows/00-gendoc.yml
+++ b/.github/workflows/00-gendoc.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - main
-
+  workflow_dispatch:
+    branches:
+      - main
 jobs:
   deploy:
     runs-on: ubuntu-latest
