--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
   },
+  "dependencies": {
+    "@tensorflow/tfjs": "^4.2.0"
+  },
   "files": [
     "build/openlime.js",
     "LICENSE",
