--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "@rollup/plugin-multi-entry": "^4.1.0",
     "copy-webpack-plugin": "^10.2.4",
     "html-webpack-plugin": "^5.5.0",
-    "ink-docstrap-template": "^1.3.2",
-    "jsdoc": "^3.6.11",
+    "jsdoc": "^4.0.4",
     "nodemon": "^2.0.15",
     "rollup": "^2.52.3",
     "rollup-plugin-terser": "^7.0.2",
@@ -33,7 +32,10 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
-    "@tensorflow/tfjs": "^4.2.0"
+    "@tensorflow/tfjs": "^4.2.0",
+    "moment": "^2.30.1",
+    "sanitize-html": "^2.13.1",
+    "taffydb": "^2.7.3"
   },
   "files": [
     "build/openlime.js",
