--- a/.github/workflows/00-gendoc.yml
+++ b/.github/workflows/00-gendoc.yml
@@ -14,8 +14,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Setup node
-        uses: actions/setup-node@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'      
       - run: npm install ink-docstrap
 
       - name: JSDoc Action
