--- a/.github/workflows/01-release.yml
+++ b/.github/workflows/01-release.yml
@@ -30,11 +30,12 @@ jobs:
       with:
         ref: ${{ env.RELEASE_VERSION }}
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
       with:
+        node-version: '20'
         cache: 'npm'
-
+        
     - name: Install npm
       run: npm ci
 
