--- a/.github/workflows/00-gendoc.yml
+++ b/.github/workflows/00-gendoc.yml
@@ -1,34 +1,36 @@
-name: GitHub pages
+name: Generate JSDoc documentation
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   workflow_dispatch:
-    branches:
-      - main
+
 jobs:
-  deploy:
+  doc:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout repo
+      uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'      
-      - run: npm install ink-docstrap
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '20'
 
-      - name: JSDoc Action
-        uses: andstor/jsdoc-action@v1.2.1
-        with:
-          front_page: ./README.md
-          config_file: ./jsdoc/jsdoc.json
+    - name: Install dependencies
+      run: npm ci
 
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs
+    - name: Generate documentation
+      run: npm run doc
+
+    - name: Copy teaser image to docs/img
+      run: |
+        mkdir -p docs/img
+        cp jsdoc/static/img/openlime-teaser.jpg docs/img/
+
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./docs
